{
  "@@locale": "fi",
  "pro": "Pro",
  "rootFolder": "Root Folder",
  "beta": "BETA",
  "none": "None",
  "settingsOk": "Ok",
  "settingsCancel": "Cancel",
  "settingsTitle": "Settings",
  "settingsAuthorLabel": "Author Name",
  "settingsAuthorValidator": "Please enter a name",
  "settingsEmailLabel": "Email Address",
  "settingsEmailValidatorEmpty": "Please enter an email",
  "settingsEmailValidatorInvalid": "Please enter a valid email",
...
  "settingsExperimentalHistory": "History View",
  "settingsEditorsTitle": "Editor Settings",
  "settingsEditorsSubtitle": "Configure how different editors work",
  "settingsEditorsDefaultEditor": "Default Editor",
  "settingsEditorsDefaultState": "Default State",
  "settingsEditorsMarkdownEditor": "Markdown Editor",
  "settingsEditorsJournalEditor": "Journal Editor",
  "settingsEditorsDefaultFolder": "Default Folder",
  "settingsEditorsChecklistEditor": "Checklist Editor",
  "settingsEditorsRawEditor": "Raw Editor",
  "settingsEditorsChoose": "Choose Editor",
  "settingsEditorsOrgEditor": "Org Editor",
  "settingsEditorsDefaultNoteFormat": "Default Note Format",
  "settingsEditorsJournalDefaultFolderSelect": "Creating a Note in '{loc}'",
  "@settingsEditorsJournalDefaultFolderSelect": {
    "placeholders": {
...
  "settingsLicenseTitle": "Licenses",
  "settingsLicenseSubtitle": "GitJoural uses other great software",
  "settingsSshKeyKeyType": "SSH Key Type",
  "settingsSshKeyRsa": "RSA",
  "settingsSshKeyEd25519": "Ed25519",
  "editorsChecklistAdd": "Add Item",
  "editorsCommonDefaultBodyHint": "Write here",
  "editorsCommonDefaultTitleHint": "Title",
  "editorsCommonDiscard": "Discard Changes",
  "editorsCommonShare": "Share Note",
  "editorsCommonTakePhoto": "Take Photo",
  "editorsCommonAddImage": "Add Image from Gallery",
  "editorsCommonEditFileName": "Edit File Name",
...
  "editorsCommonSaveNoteFailedMessage": "We're sorry, but we cannot seem to save the Note. It has been copied to the clipboard to avoid data loss.",
  "editorsCommonDefaultFileNameHint": "File Name",
  "editorsCommonFind": "Find in note",
  "actionsNewNote": "New Note",
  "actionsNewJournal": "New Journal Entry",
  "actionsNewChecklist": "New Checklist",
  "screensFoldersTitle": "Folders",
  "screensFoldersSelected": "Folder Selected",
  "screensFoldersDialogTitle": "Create new Folder",
  "screensFoldersDialogCreate": "Create",
  "screensFoldersDialogDiscard": "Discard",
  "screensFoldersErrorDialogTitle": "Error",
  "screensFoldersErrorDialogDeleteContent": "Cannot delete a Folder which contains notes",
...
  "screensTagsEmpty": "No Tags Found",
  "screensFilesystemIgnoredFileTitle": "File Ignored",
  "screensFilesystemIgnoredFileOk": "Ok",
  "screensFilesystemIgnoredFileRename": "Rename",
  "screensFilesystemRenameDecoration": "File Name",
  "screensFilesystemRenameTitle": "Rename",
  "screensFolderViewEmpty": "Let's add some notes?",
  "screensHomeAllNotes": "All Notes",
  "screensCacheLoadingText": "Reading Git History ...",
  "screensErrorTitle": "Error",
  "screensErrorMessage": "The repo couldn't be opened. Please file a bug and recreate the repo.",
  "widgetsRenameYes": "Rename",
  "widgetsRenameNo": "Cancel",
...
  "widgetsFolderViewHeaderOptionsAuto": "Auto Generated Title",
  "widgetsFolderViewHeaderOptionsTitleFileName": "Title or FileName",
  "widgetsFolderViewHeaderOptionsFileName": "FileName",
  "widgetsFolderViewHeaderOptionsSummary": "Show Summary",
  "widgetsFolderViewHeaderOptionsCustomize": "Customize View",
  "widgetsFolderViewViewsStandard": "Standard View",
  "widgetsFolderViewViewsJournal": "Journal View",
  "widgetsFolderViewViewsGrid": "Grid View",
  "widgetsFolderViewViewsCard": "Card View",
  "widgetsFolderViewViewsSelect": "Select View",
  "widgetsFolderViewViewsCalendar": "Calendar View",
  "widgetsFolderViewSortingOptions": "Sorting Options",
  "widgetsFolderViewViewOptions": "View Options",
  "widgetsFolderViewNoteDeleted": "Note Deleted",
  "widgetsFolderViewUndo": "Undo",
...
    "placeholders": {
      "num": {}
    }
  },
  "ignoredFilesDot": "Starts with a .",
  "ignoredFilesExt": "Doesn't end with one of the following -",
  "drawerSetup": "Setup Git Host",
  "drawerPro": "Unlock Pro Version",
  "drawerAll": "All Notes",
  "drawerFolders": "Folders",
  "drawerFs": "File System",
  "drawerTags": "Tags",
  "drawerShare": "Share App",
...
  "setupCloneUrlValidatorInvalid": "Invalid Input",
  "setupCloneUrlValidatorOnlySsh": "Only SSH urls are currently accepted",
  "setupCloneUrlManualTitle": "Please create a new git repository -",
  "setupCloneUrlManualStep1": "1. Go to the website, create a repo and copy its git clone URL",
  "setupCloneUrlManualStep2": "2. Enter the Git clone URL",
  "setupCloneUrlManualButton": "Open Create New Repo Webpage",
  "setupNext": "Next",
  "setupFail": "Failed",
  "setupKeyEditorsPublic": "Invalid Public Key - Doesn't start with ssh-rsa or ssh-ed25519",
  "setupKeyEditorsPrivate": "Invalid Private Key",
  "setupKeyEditorsLoad": "Load from File",
  "setupSshKeyGenerate": "Generating SSH Key",
  "setupSshKeyTitle": "In order to access this repository, this public key must be copied as a deploy key",
...
